--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
@@ -17,7 +18,7 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configuraçoes no seu ambiente</p>
                 <form action="login" method="post">
                     <input type="text" placeholder="Usuário">
-                    <input type="password" placeholder="<PASSWORD>ha">
+                    <input type="password" placeholder="PASSWORD">
                     <input type="submit" value="Entrar">
                 </form>
                 <a href="#">Esqueci minha senha</a>
